🚀 Initial commit - Flask + Nginx Docker Compose setup with .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,41 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-.env
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+.env/
+.venv/
+env/
+ENV/
+
+# Distribution / packaging
+*.egg-info/
+dist/
+build/
+
+# Logs
 *.log
-*.DS_Store
-*.vscode
+
+# IDE / editor settings
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Docker related
+*.pid
+*.tar
+*.log
+
+# Pytest / coverage
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Nginx (runtime files, not configs)
+nginx/*.pid
+nginx/*.log
